[tool.poetry]
name = "adk_quickstart"
version = "0.1.0"
description = "This project provides a basic template and example to help you get started with building and deploying your own AI agents using Agent Development Kit (ADK)."
authors = ["Baptiste PIRAULT"]
readme = "README.md"

[tool.poetry.dependencies]
google-adk = ">=0.5.0"

[tool.poetry.group.dev.dependencies]
google-adk = { version = ">=0.5.0", extras = ["eval"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
